# Food-Access-Model

./: .gitattributes  .gitignore  Dockerfile  README.md  addhouseholdsize.py  agent_visualization.py  analyze_profiling.py  api_helper.py  api_server.py  collect.py  compose.yaml  constants.py  custom_map_visualization.py  database.dmp  entrypoint.sh  geo_model.py  get_data.py  household.py  parallel_process_scheduler.py  parallel_scheduler.py  pre-commit-config.yaml  process-prof.py  profiling.py  pyproject.toml  requirements.txt  run.py  run.sh  run_local.py  run_sbatch  run_sm_sbatch  server.py  store.py  testdata_home.csv  testdata_store.csv
.github/workflows/: build-push-deploy.yml  flake8.yml
abm/: household.py
alembic/: env.py
api/: routes.py
data/: Testing.ipynb  create_households.py  get_data.py  households.csv  process_county_raster.ipynb
data/household_creation/: NLCD_color_map.clr  Untitled.ipynb  county_raster.tif  create_household_polygons.py  create_households.py  create_households_testing.py  create_roads.py  crop_US_raster.ipynb  database_connection.py  features.csv  get_census_data.py  get_roads.py  get_stores.py  household_constants.py  osm_testing.ipynb  process_county_raster.ipynb
data_scripts/: addworkercol.py
food_access_model/: main.py  settings.py
food_access_model/abm/: agent_visualization.py  (+3 more)
model_multi_processing/: batch_running.py
old_benchmarking/: short.csv  testing_data_columbus_cols.csv  testing_data_columbus_complete.csv
preprocessing/: household_constants.py
repository/: db_repository.py
templates/: map.js
(+22 files in other folders)
