[project]
name = "food-access-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "fastapi==0.115.5",
    "mesa-geo==0.8.0",
    "osmnx==2.0.0",
    "gunicorn==22.0.0", # You can omit the version to always get the latest
    "pyinstrument==4.6.2",
    "databases>=0.9.0",
    "orjson>=3.11.0",
    "asyncpg>=0.30.0",
]
